--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,196 +1,224 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@drawable/bg_gradient"
-    android:padding="16dp">
+    android:padding="10dp">
 
+    <!-- Greeting -->
+    <TextView
+        android:id="@+id/greeting_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hi, Dodi\nGood Morning"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:fontFamily="sans-serif-medium"
+        android:lineSpacingExtra="4dp" />
+
+    <!-- Jam dan tanggal -->
+    <TextView
+        android:id="@+id/time_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="08:20\n06 Juni 2025"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:layout_gravity="center_horizontal"/>
+
+    <!-- Goal Info -->
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
-
-        <!-- Greeting -->
-        <TextView
-            android:id="@+id/greeting_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hi, Dodi\nGood Morning"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:fontFamily="sans-serif-medium"
-            android:lineSpacingExtra="4dp" />
-
-        <!-- Jam dan tanggal -->
-        <TextView
-            android:id="@+id/time_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="08:20\n06 Juni 2025"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="28sp"
-            android:textStyle="bold"
-            android:layout_gravity="center_horizontal"/>
-
-        <!-- Goal Info -->
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginTop="8dp">
         <TextView
             android:id="@+id/tvGoalTitle"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Goals : McLaren"
+            android:layout_weight="1"
+            android:text="Goals : Surga"
             android:textSize="16sp"
-            android:textColor="@android:color/black"
-            android:layout_marginTop="8dp" />
+            android:textColor="@android:color/black" />
+        <ImageView
+            android:id="@+id/btnEditGoal"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@android:drawable/ic_menu_edit"
+            android:contentDescription="Edit Goal"
+            android:padding="4dp"
+            android:layout_marginStart="8dp"/>
+    </LinearLayout>
 
-        <ProgressBar
-            android:id="@+id/progressGoal"
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:layout_marginTop="8dp"
-            android:progress="30"
-            android:max="100"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:progressDrawable="@drawable/progress_goal_drawable" />
+    <ProgressBar
+        android:id="@+id/progressGoal"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_marginTop="8dp"
+        android:progress="30"
+        android:max="100"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:progressDrawable="@drawable/progress_goal_drawable" />
 
-        <TextView
-            android:id="@+id/tvGoalTarget"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Rp.10.000.000,00"
-            android:textSize="14sp"
-            android:textColor="@android:color/black"
-            android:layout_marginTop="4dp"
-            android:gravity="end"/>
+    <TextView
+        android:id="@+id/tvGoalTarget"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Rp.10.000.000,00"
+        android:textSize="14sp"
+        android:textColor="@android:color/black"
+        android:layout_marginTop="4dp"
+        android:gravity="end"/>
+
+    <!-- Ringkasan Keuangan -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/summary_background"
+        android:elevation="4dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingTop="5dp"
+        android:paddingBottom="20dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp">
 
         <!-- Ringkasan Keuangan -->
         <LinearLayout
+            android:id="@+id/layoutSummary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/summary_background"
-            android:elevation="4dp"
+            android:layout_marginTop="12dp"
             android:gravity="center"
-            android:orientation="vertical"
-            android:paddingTop="5dp"
-            android:paddingBottom="20dp">
+            android:orientation="horizontal"
+            android:weightSum="3">
 
-            <!-- Ringkasan Keuangan -->
+            <!-- Total -->
             <LinearLayout
-                android:id="@+id/layoutSummary"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:weightSum="3">
+                android:layout_marginEnd="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/summary_background"
+                android:orientation="vertical"
+                android:padding="6dp">
 
-                <!-- Total -->
-                <LinearLayout
-                    android:layout_width="0dp"
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="4dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/summary_background"
-                    android:orientation="vertical"
-                    android:padding="8dp">
+                    android:text="Total"
+                    android:textColor="@android:color/black"
+                    android:textSize="13sp"
+                    android:gravity="start" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Total"
-                        android:textColor="@android:color/black"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/tvTotalAmount"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Rp.7.500.000"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <!-- Income -->
-                <LinearLayout
-                    android:layout_width="0dp"
+                <TextView
+                    android:id="@+id/tvTotalAmount"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="2dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/summary_background"
-                    android:orientation="vertical"
-                    android:padding="8dp">
+                    android:text="Rp.7.500.000"
+                    android:textColor="@android:color/black"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:gravity="end"
+                    android:singleLine="true"
+                    android:ellipsize="end" />
+            </LinearLayout>
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Income"
-                        android:textColor="#388E3C"
-                        android:textSize="14sp" />
+            <!-- Income -->
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/summary_background"
+                android:orientation="vertical"
+                android:padding="6dp">
 
-                    <TextView
-                        android:id="@+id/tvIncome"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Rp.10.000.000"
-                        android:textColor="#388E3C"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <!-- Expense -->
-                <LinearLayout
-                    android:layout_width="0dp"
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/summary_background"
-                    android:orientation="vertical"
-                    android:padding="8dp">
+                    android:text="Income"
+                    android:textColor="#388E3C"
+                    android:textSize="13sp"
+                    android:gravity="start" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Expense"
-                        android:textColor="@color/red"
-                        android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/tvIncome"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Rp.10.000.000"
+                    android:textColor="#388E3C"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:gravity="end"
+                    android:singleLine="true"
+                    android:ellipsize="end" />
+            </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/tvExpense"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Rp.2.500.000"
-                        android:textColor="@color/red"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
+            <!-- Expense -->
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/summary_background"
+                android:orientation="vertical"
+                android:padding="6dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Expense"
+                    android:textColor="@color/red"
+                    android:textSize="13sp"
+                    android:gravity="start" />
+
+                <TextView
+                    android:id="@+id/tvExpense"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Rp.2.500.000"
+                    android:textColor="@color/red"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:gravity="end"
+                    android:singleLine="true"
+                    android:ellipsize="end" />
             </LinearLayout>
         </LinearLayout>
-
-        <!-- Judul Transaksi Terbaru -->
-        <TextView
-            android:id="@+id/tvRecentTransactions"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Transaksi Terbaru"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginTop="16dp"
-            android:textColor="@android:color/black" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvRecentTransactions"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:overScrollMode="never"
-            android:nestedScrollingEnabled="false"/>
-
     </LinearLayout>
-</ScrollView>
+
+    <!-- Judul Transaksi Terbaru -->
+    <TextView
+        android:id="@+id/tvRecentTransactions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Transaksi Terbaru"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginTop="16dp"
+        android:textColor="@android:color/black"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvRecentTransactions"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:overScrollMode="never"
+        android:nestedScrollingEnabled="false"/>
+
+</LinearLayout>
