--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -4,18 +4,18 @@
 
     <item
         android:id="@+id/item_home"
-        android:icon="@drawable/home_page"
+        android:icon="@drawable/ic_home"
         android:title="@string/home" />
     <item
         android:id="@+id/item_add"
-        android:icon="@drawable/plus_math"
+        android:icon="@drawable/ic_add"
         android:title="@string/add" />
     <item
         android:id="@+id/item_chart"
-        android:icon="@drawable/bar_chart"
+        android:icon="@drawable/ic_chart"
         android:title="@string/chart" />
     <item
         android:id="@+id/item_settings"
-        android:icon="@drawable/settings"
+        android:icon="@drawable/ic_settings"
         android:title="@string/settings" />
 </menu>
